# vaultctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  issue-sanitize.yml  release.yml
docs/: SECURITY.md
scripts/: check_complexity.sh  check_documentation_updates.py  session_start.py
src/vaultctl/: __init__.py  __main__.py  ai_detect.py  cli.py  config.py  detect.py  detection_ops.py  keys.py  password.py  redact.py  search.py  self_update.py  types.py  vault.py  yaml_util.py
tests/: conftest.py  test_ai_detect.py  test_cli.py  test_config.py  test_detect.py  test_detection_ops.py  test_keys.py  test_password.py  test_redact.py  test_search.py  test_self_update.py  test_types.py  test_vault.py  test_yaml_util.py
